# oxid-gateway

./: .env  Cargo.toml  Dockerfile  README.MD  README.md  start
k8s/: keycloak-postgres.yml  keycloak.yml  oxid-gateway-postgres.yml  oxid-gateway.yaml
migrations/2024-04-24-231227_base/: down.sql  up.sql
src/: database_utils.rs  lib.rs  main.rs  models.rs  openapi.rs  schema.rs  targets.rs
src/api/: docs.rs  errors.rs  mod.rs
src/api/dtos/: consumers.rs  mod.rs  pagination.rs  routes.rs  targets.rs
src/api/handlers/: consumers.rs  routes.rs  targets.rs  upstreams.rs
src/database/: errors.rs  mod.rs
src/database/entities/: consumers.rs  consumers_routes.rs  mod.rs  routes.rs  targets.rs  upstreams.rs
src/database/repositories/: consumers.rs  mod.rs  routes.rs  targets.rs  upstreams.rs
src/domain/: mod.rs
src/domain/models/: error.rs  mod.rs  result_body_container.rs
src/handlers/: dtos.rs  mod.rs
src/handlers/consumers/: create_consumer.rs  delete_consumer.rs  find_consumer_by_id.rs  mod.rs  update_consumer.rs
src/handlers/routes/: create_route.rs  delete_route.rs  find_route_by_id.rs  mod.rs  update_route.rs
src/handlers/targets/: create_target.rs  delete_target.rs  find_target_by_id.rs  mod.rs  update_target.rs
src/handlers/upstreams/: create_upstream.rs  delete_upstream.rs  find_upstream_by_id.rs  mod.rs  update_upstream.rs
src/infra/: errors.rs  mod.rs
src/infra/repositories/: consumers_repository.rs  mod.rs  routes_repository.rs  targets_repository.rs  upstream_repository.rs
