[package]
name = "oxid-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.4" }
tower-http = { version = "0.5.2", features = ["cors"] }
diesel = { version = "2.1.6", features = ["postgres", "uuid", "serde_json"]}
diesel_migrations = "2"
deadpool-diesel = { version = "0.6.0", features = ["postgres"]}
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.0"
uuid = { version = "1.9.1", features = ["v4"]}
